--- a/.github/workflows/recsys-arxiv-daily.yml
+++ b/.github/workflows/recsys-arxiv-daily.yml
@@ -48,12 +48,12 @@ jobs:
         run: |
           python daily_arxiv.py
           
-      - name: Push new cv-arxiv-daily.md
+      - name: Push new recsys-arxiv-daily.md
         uses: github-actions-x/commit@v2.9
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Github Action Automatic Update CV Arxiv Papers"
-          files: README.md docs/cv-arxiv-daily.json docs/cv-arxiv-daily-web.json docs/index.md docs/cv-arxiv-daily-wechat.json docs/wechat.md
+          commit-message: "Github Action Automatic Update RecSys Arxiv Papers"
+          files: README.md docs/recsys-arxiv-daily.json docs/recsys-arxiv-daily-web.json docs/index.md docs/recsys-arxiv-daily-wechat.json docs/wechat.md
           rebase: 'true'
           name: ${{ env.GITHUB_USER_NAME }}
           email: ${{ env.GITHUB_USER_EMAIL }}
