--- a/config.yaml
+++ b/config.yaml
@@ -12,9 +12,9 @@ publish_gitpage: True
 publish_wechat: False
 
 # file paths
-json_readme_path: './docs/cv-arxiv-daily.json'
-json_gitpage_path: './docs/cv-arxiv-daily-web.json'
-json_wechat_path: './docs/cv-arxiv-daily-wechat.json'
+json_readme_path: './docs/recsys-arxiv-daily.json'
+json_gitpage_path: './docs/recsys-arxiv-daily-web.json'
+json_wechat_path: './docs/recsys-arxiv-daily-wechat.json'
 
 md_readme_path: 'README.md'
 md_gitpage_path: './docs/index.md'
@@ -27,4 +27,4 @@ keywords:
     "LLM":
         filters: ["llm", "large language model", "finetuning", "pretrained"]
     "Image Genration":
-        filters: ["image", "generation", "personalized"]
+        filters: ["image generation", "personalized"]
